--- a/templates/index.html
+++ b/templates/index.html
@@ -1,9 +1,9 @@
-
 {% load static %}
 <!DOCTYPE html>
 <html lang="en">
 
 <head>
+  <title>Home</title>
   <meta charset="UTF-8" />
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -12,111 +12,189 @@
   <link rel='stylesheet' href='https://cdn-uicons.flaticon.com/uicons-brands/css/uicons-brands.css'>
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">
   <link rel="stylesheet" href="{% static 'css/styles.css' %}">
+  <link rel="stylesheet" href="{% static 'js/script.js' %}">
   <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
   <script src="https://unpkg.com/ionicons@5.1.2/dist/ionicons.js"></script>
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/flatpickr/dist/flatpickr.min.css">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
+  <link rel="stylesheet" href="https://cdn-uicons.flaticon.com/uicons-solid-rounded/css/uicons-solid-rounded.css" />
+  <link rel='stylesheet' href='https://cdn-uicons.flaticon.com/uicons-bold-rounded/css/uicons-bold-rounded.css'>
+  <link rel='stylesheet' href='https://cdn-uicons.flaticon.com/uicons-brands/css/uicons-brands.css'>
+  <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+  <script src="{% static 'js/script.js' %}"></script>
+  <link rel="stylesheet" href="https://unpkg.com/swiper/swiper-bundle.min.css" />
+
+  <!-- Inclure Swiper JS -->
+  <script src="https://unpkg.com/swiper/swiper-bundle.min.js"></script>
+
 </head>
 
 <body id="body-pd" class="body1">
 
   <div class="l-navbar" id="navbar">
     <nav class="nav">
-        <div>
-          <div class="nav__brand">
-            <a href="#" class="nav__logo">
-                <img src="{% static 'img/logo.png' %}" alt="Votre Logo" class="logo" id="nav-toggle">
-                <span class="nav__text">Dash d'Or</span>
-
-            </a>
-          </div>
-            <div class="nav__list">
-                <a href="#" class="nav__link active">
-                    <ion-icon name="home-outline" class="nav__icon"></ion-icon>
-                    <span class="nav__name">Dashboard</span>
-                </a>
-                <a href="#" class="nav__link">
-                    <ion-icon name="chatbubbles-outline" class="nav__icon"></ion-icon>
-                    <span class="nav__name">Messenger</span>
-                </a>
-
-                <div  class="nav__link collapse">
-                    <ion-icon name="folder-outline" class="nav__icon"></ion-icon>
-                    <span class="nav__name">Projects</span>
-
-                    <ion-icon name="chevron-down-outline" class="collapse__link"></ion-icon>
-
-                    <ul class="collapse__menu">
-                        <a href="#" class="collapse__sublink">Data</a>
-                        <a href="#" class="collapse__sublink">Group</a>
-                        <a href="#" class="collapse__sublink">Members</a>
-                    </ul>
-                </div>
-
-                <a href="#" class="nav__link">
-                    <ion-icon name="pie-chart-outline" class="nav__icon"></ion-icon>
-                    <span class="nav__name">Analytics</span>
-                </a>
-                <div class="nav__link collapse">
-                    <ion-icon name="people-outline" class="nav__icon"></ion-icon>
-                    <span class="nav__name">Team</span>
-
-                    <ion-icon name="chevron-down-outline" class="collapse__link"></ion-icon>
-
-                    <ul class="collapse__menu">
-                        <a href="#" class="collapse__sublink">Data</a>
-                        <a href="#" class="collapse__sublink">Group</a>
-                        <a href="#" class="collapse__sublink">Members</a>
-                    </ul>
-                </div>
-                <a href="#" class="nav__link">
-                    <ion-icon name="settings-outline" class="nav__icon"></ion-icon>
-                    <span class="nav__name">Settings</span>
-                </a>
-            </div>
-        </div>
-
-        <a href="#" class="nav__link">
-            <ion-icon name="log-out-outline" class="nav__icon"></ion-icon>
-            <span class="nav__name">Log Out</span>
+      <div class="nav__brand">
+        <a href="#" class="nav__logo">
+          <img src="{% static 'img/logo.png' %}" alt="Votre Logo" class="logo" id="nav-toggle">
+          <span class="nav__text">Dash d'Or</span>
         </a>
+      </div>
+      <div class="nav__list">
+        <a href="/index" class="nav__link active">
+          <ion-icon name="home-outline" class="nav__icon"></ion-icon>
+          <span class="nav__name">Dashboard</span>
+        </a>
+        <!--
+        <div class="nav__link collapse">
+          <ion-icon name="cloud-download-outline" class="nav__icon"></ion-icon>
+          <span class="nav__name">Download</span>
+          <ion-icon name="chevron-down-outline" class="collapse__link"></ion-icon>
+          
+          <ul class="collapse__menu">
+              <li><a href="#" class="collapse__sublink">OMEA This month</a></li>
+              <li><a href="#" class="collapse__sublink">INT This month</a></li>
+              <li><a href="#" class="collapse__sublink">Global This month</a></li>
+              <li><a href="#" class="collapse__sublink">EPG This month</a></li>
+              <li><a href="#" class="collapse__sublink">APN This month</a></li>
+          </ul>
+      </div>
+      -->
+      </div>
+
+      <a  href="{% url 'logout' %}" class="nav__link">
+        <ion-icon name="log-out-outline" class="nav__icon"></ion-icon>
+        <span class="nav__name">Log Out</span>
+      </a>
     </nav>
-</div>
+  </div>
+  <script src="{% static 'js/script.js' %}"></script>
+  <script src="{% static 'js/script.js' %}"></script>
 
   <section class="home-section">
-    <div class="home-content">
-      <button class="custom-button">MME</button>
-      <button class="custom-button">EPG</button>
-      <button class="custom-button">TMS/Peakflow</button>
-      <button class="custom-button">DNS</button>
-      <button class="custom-button">Firewall</button>
-      <button class="custom-button">PCRF</button>
-      <button class="custom-button">Les caches</button>
-      <button class="custom-button">F5</button>
-      <button class="custom-button">BNG</button>
-      <button class="custom-button">6Cure</button>   
-    </div>
+  <div class="home-content">
+      <button class="custom-button show-mme active" id="mmeBtn">MME OMEA</button>
+      <button class="custom-button show-int" id="intBtn">MME INT</button>
+      <button class="custom-button show-global" id="globalBtn">MME Global</button>
 
-    <div class="container" style="margin-top: 25px;">
-      <section class="table-section">
-        <p>tableau</p>
-      </section>
-    </div>
+      <button class="custom-button ">EPG</button>
+      <button class="custom-button ">APN</button>
 
-    <div style="margin-top: 25px;" class="charts-container">
-      <section class="charts-section" style="margin-left: 25px; margin-right: 10px;">
-        <canvas id="myChart"></canvas>
-      </section>
-      <section class="charts-section" style="margin-right: 10px;">
-        <canvas id="myline"  width="600" height="300"></canvas>
-      </section>
-      <section class="charts-section">
-        <canvas id="myRadarChart" width="300"></canvas>
-      </section>
-    </div>
-    
 
+      <span class="vertical-line"></span>
+      
+
+      <div class="containerheader">
+        <select class="custom-input custom-select">
+          {% if section == "int" %}
+            <option value="Int" class="custom-button">All</option>
+            <option value="Allaverage" class="custom-button">All Average</option>
+          {% elif section == "global" %}
+            <option value="TN1global" class="custom-button">TN1</option>
+            <option value="TN2global" class="custom-button">TN2</option>
+            <option value="Sousseglobal" class="custom-button">Sousse</option>
+            <option value="Allglobal" class="custom-button">All Global</option>
+          {% else %}
+            <option value="TN1" class="custom-button">TN1</option>
+            <option value="TN2" class="custom-button">TN2</option>
+            <option value="Sousse" class="custom-button">Sousse</option>
+            <option value="All" class="custom-button">All</option>
+
+          {% endif %}
+        </select>
+
+        
+        <input type="text" id="dateRangePicker" class="custom-input" placeholder="Select Date" />
+        <button class="custom-button" id="goBtn">Go</button>
+        
+      </div>
+    </div>
   </section>
+
+  {% include 'MMEint.html' %}
+  {% include 'MMEomea.html' %}
+  {% include 'MMEglobal.html' %}
+
   
 
+
+
+  <script src="https://cdn.jsdelivr.net/npm/flatpickr"></script>
+  <script src="{% static 'js/script.js' %}"></script>
+
+  <script>
+
+    
+    $(document).ready(function() {
+
+      $('#mmeContainer').show();
+      $('#tn1_table').show();
+
+      $('#intContainer').hide();
+      $('#globalContainer').hide();
+  
+      $('#mmeBtn').click(function(e) {
+        e.preventDefault();
+        $('#mmeContainer').show();
+        $('.custom-select').html(`
+          <option value="TN1" class="custom-button">TN1</option>
+          <option value="TN2" class="custom-button">TN2</option>
+          <option value="Sousse" class="custom-button">Sousse</option>
+          <option value="All" class="custom-button">All</option>
+          
+        `);
+      });
+
+      
+    
+      $('#intBtn').click(function(e) {
+        e.preventDefault();
+        $('#intContainer').show();
+        $('.custom-select').html(`<option value="Int" class="custom-button">All</option>
+                                  <option value="Allaverage" class="custom-button">All Average</option>
+                                  `);
+      });
+    
+      $('#globalBtn').click(function(e) {
+        e.preventDefault();
+        $('#globalContainer').show();
+        $('.custom-select').html(`
+          <option value="TN1global" class="custom-button">TN1</option>
+          <option value="TN2global" class="custom-button">TN2</option>
+          <option value="Sousseglobal" class="custom-button">Sousse</option>
+          <option value="Allglobal" class="custom-button">All Global</option>
+          
+        `);
+      });
+      
+    });    
+    const showMenu = (toggleId, navbarId, bodyId)=>{
+      const toggle = document.getElementById(toggleId),
+      navbar = document.getElementById(navbarId),
+      bodypadding = document.getElementById(bodyId)
+    
+      if(toggle && navbar){
+        toggle.addEventListener('click', ()=>{
+          navbar.classList.toggle('expander')
+    
+          bodypadding.classList.toggle('body-pd')
+        })
+      }
+    }
+    showMenu('nav-toggle','navbar','body-pd')
+    
+
+    $(document).ready(function() {
+      $('.custom-button').click(function() {
+          // Supprimer la classe active de tous les boutons
+          $('.custom-button').removeClass('active');
+          // Ajouter la classe active uniquement au bouton cliqué
+          $(this).addClass('active');
+      });
+  });
+  
+  </script>
+  
+  <script src="https://cdn.jsdelivr.net/npm/flatpickr"></script>
   <script src="{% static 'js/script.js' %}"></script>
 </body>
 
