--- a/templates/MMEglobal.html
+++ b/templates/MMEglobal.html
@@ -131,8 +131,8 @@
           
           if (selectedOption === 'global') {
             var sau4gAvg = calculateSumByDay(startDate, endDate, 2);
-            var pdpact2gAvg = calculateSumByDay(startDate, endDate, 3);
-            var pdpact3gAvg = calculateSumByDay(startDate, endDate, 4);
+            var pdpact2gAvg = calculateSumByDayColumn2(startDate, endDate, 3);
+            var pdpact3gAvg = calculateSumByDayColumn3(startDate, endDate, 4);
 
             console.log('Start Date:', startDate.toISOString().split('T')[0]);
             console.log('End Date:', endDate.toISOString().split('T')[0]);
@@ -164,10 +164,12 @@
                 } else {
                   $(this).hide();
                 }
+
+                $('.table-section').hide();
+                $('#' + selectedOption.toLowerCase() + '_table').show();
               });
       
-              $('.table-section').hide();
-              $('#' + selectedOption.toLowerCase() + '_table').show();
+              
       
           }
     
@@ -232,6 +234,83 @@
       
             return maxSum;
           }
+
+          //column 2
+          function calculateSumByDayColumn2(startDate, endDate, columnNumber) {
+            var sums = {};
+          
+            function processTableRows(tableId) {
+              $(tableId + ' tbody tr').each(function() {
+                var dateText = $(this).find('td:first-child').text().trim();
+                var formattedDateText = dateText.replace(/\./g, '-');
+                var rowDate = new Date(formattedDateText);
+          
+                if (rowDate >= startDate && rowDate <= endDate) {
+                  var value = parseFloat($(this).find('td:nth-child(' + columnNumber + ')').text().replace(',', '.'));
+                  if (!isNaN(value) && value < 17000) {
+                    var dateKey = rowDate.toISOString().split('T')[0];
+                    sums[dateKey] = (sums[dateKey] || 0) + value;
+                  }
+                }
+              });
+            }
+          
+            processTableRows('#tn1global_table');
+            processTableRows('#tn2global_table');
+            processTableRows('#sousseglobal_table');
+          
+            var maxSum = 0;
+            var maxDate = null;
+          
+            Object.keys(sums).forEach(function(date) {
+              if (sums[date] > maxSum) {
+                maxSum = sums[date];
+                maxDate = date;
+              }
+            });
+          
+            return maxSum;
+          }
+
+
+          //column 3
+          function calculateSumByDayColumn3(startDate, endDate, columnNumber) {
+            var sums = {};
+          
+            function processTableRows(tableId) {
+              $(tableId + ' tbody tr').each(function() {
+                var dateText = $(this).find('td:first-child').text().trim();
+                var formattedDateText = dateText.replace(/\./g, '-');
+                var rowDate = new Date(formattedDateText);
+          
+                if (rowDate >= startDate && rowDate <= endDate) {
+                  var value = parseFloat($(this).find('td:nth-child(' + columnNumber + ')').text().replace(',', '.'));
+                  if (!isNaN(value) && value < 70000) {
+                    var dateKey = rowDate.toISOString().split('T')[0];
+                    sums[dateKey] = (sums[dateKey] || 0) + value;
+                  }
+                }
+              });
+            }
+          
+            processTableRows('#tn1global_table');
+            processTableRows('#tn2global_table');
+            processTableRows('#sousseglobal_table');
+          
+            var maxSum = 0;
+            var maxDate = null;
+          
+            Object.keys(sums).forEach(function(date) {
+              if (sums[date] > maxSum) {
+                maxSum = sums[date];
+                maxDate = date;
+              }
+            });
+          
+            return maxSum;
+          }
+  
+  
       
           $('#downloadCsvBtglobal').click(function(e) {
             e.preventDefault();
